--- a/pages/sections/sections-home/sections-home.wxml
+++ b/pages/sections/sections-home/sections-home.wxml
@@ -5,7 +5,7 @@
 <!--板块界面-->
 <view class="forum">
     <view class="item {{(index+1) % 3 == 0 ? 'last' : ''}}" wx:for="{{forum_list}}"
-     data-name="{{item.title}}" data-has-org="{{item.hasOrgLevel}}" data-forumid="{{index}}" wx:key="id" bindtap="handleClick">
+     data-name="{{item.title}}" data-has-org="{{item.hasOrgLevel}}" data-forumid="{{index+1}}" wx:key="id" bindtap="handleClick">
         <image class="icon" src="{{item.picUrl}}"></image>
         <text class="text">{{item.title}}</text>
     </view>
