--- a/pages/my/my-act/my-act.wxml
+++ b/pages/my/my-act/my-act.wxml
@@ -8,8 +8,8 @@
 <view wx:if="{{current == 'tab1'}}">
     <i-cell-group i-class="act-wrap">
         <block wx:for="{{unstartActList}}" wx:key="id">
-            <i-cell title="{{item.act.name}}" label="{{item.act.description}}" is-link bindtap="goOrg" 
-                data-actid="{{item.act.id}}" data-actname="{{item.act.name}}">
+            <i-cell title="{{item.name}}" label="{{item.description}}" is-link bindtap="goOrg" 
+                data-actid="{{item.id}}" data-actname="{{item.name}}">
                 <!-- <image class="org-avator" src="/icon/like.png"  slot="icon"></image> -->
             </i-cell> 
         </block>
@@ -18,8 +18,8 @@
 <view wx:if="{{current == 'tab2'}}">
     <i-cell-group i-class="act-wrap">
         <block wx:for="{{curActList}}" wx:key="id">
-        <i-cell title="{{item.act.name}}" label="{{item.act.description}}" is-link bindtap="goOrg" 
-            data-actid="{{item.act.id}}" data-actname="{{item.act.name}}">
+        <i-cell title="{{item.name}}" label="{{item.description}}" is-link bindtap="goOrg" 
+            data-actid="{{item.id}}" data-actname="{{item.name}}">
             <!-- <image class="org-avator" src="/icon/like.png"  slot="icon"></image> -->
         </i-cell> 
         </block>
@@ -28,8 +28,8 @@
 <view wx:if="{{current == 'tab3'}}">
     <i-cell-group i-class="act-wrap">
         <block wx:for="{{endActList}}" wx:key="id">
-        <i-cell title="{{item.act.name}}" label="{{item.act.description}}" is-link bindtap="goAct" 
-            data-actid="{{item.act.id}}" data-actname="{{item.act.name}}">
+        <i-cell title="{{item.name}}" label="{{item.description}}" is-link bindtap="goAct" 
+            data-actid="{{item.id}}" data-actname="{{item.name}}">
             <!-- <image class="org-avator" src="/icon/like.png"  slot="icon"></image> -->
         </i-cell> 
         </block>
