--- a/pages/sections/org-list/org-list.wxml
+++ b/pages/sections/org-list/org-list.wxml
@@ -73,9 +73,8 @@
 </view> -->
 
 <i-cell-group i-class="org-wrap">
-    <text>123</text>
     <block wx:for="{{forumInfo}}" wx:key="id">
-        <i-cell title="{{item.name}}" label="附加描述" value="详细信息" is-link bindtap="goOrg" 
+        <i-cell title="{{item.name}}" label="附加描述" is-link bindtap="goOrg" 
         data-orgid="{{item.id}}" data-orgname="{{item.name}}">
             <image class="org-avator" src="/icon/like.png"  slot="icon"></image>
         </i-cell> 
