--- a/pages/my/feedback/feedback.wxml
+++ b/pages/my/feedback/feedback.wxml
@@ -1,7 +1,36 @@
 <!--pages/my/feedback/feedback.wxml-->
 
-<input placeholder="填写反馈"/>
-<input placeholder="留下联系方式（可选）"/>
-<button>提交反馈</button>
+<!--pages/my/new-org/new-org.wxml-->
+
+
+<!-- <van-field
+      center
+      clearable
+      label="组织名称"
+      placeholder="请输入组织名称"
+      bindinput="inputNameHandler"
+      border="{{ true }}"
+    >
+</van-field>
+<van-field
+      center
+      clearable
+      label="申请原因"
+      placeholder="请输入申请原因"
+      bindinput="inputDescriptionHandler"
+      border="{{ true }}"
+    >
+</van-field>
+<van-button class="my-button" slot="button" size="small" type="primary" custom-class="button" bindtap="submitOrg">提交申请</van-button> -->
+
+
+
+<i-panel title="组织基本信息">
+
+    <i-input type="textarea" value="{{content}}" bind:change="contentHandler" title="反馈" placeholder="写写你的建议/问题" maxlength="50"/>
+    <i-input value="{{contact}}" bind:change="contactHandler" title="联系方式(可选)" placeholder="留下qq/微信" maxlength="20"/>
+
+</i-panel>
+<a class="weui-btn weui-btn_primary" bindtap="submitFB">提交</a>
 
 <text>关于我们：\n一苇以航开发团队\n乐洋 史鑫杰 王肇凯 开聚实 王佳瑞 李永毅</text>
